@@ -1494,6 +1494,70 @@ class parse_exception : public std::runtime_error
     }
 };
 
+inline bool is_number(char c)
+{
+    return c >= '0' && c <= '9';
+}
+
+/**
+ * Helper object for consuming expected characters.
+ */
+template <class OnError>
+class consumer
+{
+  public:
+    consumer(std::string::iterator& it, const std::string::iterator& end,
+             OnError&& on_error)
+        : it_(it), end_(end), on_error_(std::forward<OnError>(on_error))
+    {
+        // nothing
+    }
+
+    void operator()(char c)
+    {
+        if (it_ == end_ || *it_ != c)
+            on_error_();
+        ++it_;
+    }
+
+    template <std::size_t N>
+    void operator()(const char (&str)[N])
+    {
+        std::for_each(std::begin(str), std::end(str) - 1,
+                      [&](char c) { (*this)(c); });
+    }
+
+    int eat_digits(int len)
+    {
+        int val = 0;
+        for (int i = 0; i < len; ++i)
+        {
+            if (!is_number(*it_) || it_ == end_)
+                on_error_();
+            val = 10 * val + (*it_++ - '0');
+        }
+        return val;
+    }
+
+    void error()
+    {
+        on_error_();
+    }
+
+  private:
+    std::string::iterator& it_;
+    const std::string::iterator& end_;
+    OnError on_error_;
+};
+
+template <class OnError>
+consumer<OnError> make_consumer(std::string::iterator& it,
+                                const std::string::iterator& end,
+                                OnError&& on_error)
+{
+    return consumer<OnError>(it, end, std::forward<OnError>(on_error));
+}
+
 /**
  * The parser class.
  */
@@ -2038,8 +2102,8 @@ class parser
         throw_parse_exception("Unterminated string literal");
     }
 
-    char parse_escape_code(std::string::iterator& it,
-                           const std::string::iterator& end)
+    std::string parse_escape_code(std::string::iterator& it,
+                                  const std::string::iterator& end)
     {
         ++it;
         if (it == end)
@@ -2073,12 +2137,110 @@ class parser
         {
             value = '\\';
         }
+        else if (*it == 'u' || *it == 'U')
+        {
+            return parse_unicode(it, end);
+        }
         else
         {
             throw_parse_exception("Invalid escape sequence");
         }
         ++it;
+        return std::string(1, value);
+    }
+
+    std::string parse_unicode(std::string::iterator& it,
+                              const std::string::iterator& end)
+    {
+        bool large = *it++ == 'U';
+        auto codepoint = parse_hex(it, end, large ? 0x10000000 : 0x1000);
+
+        if ((codepoint > 0xd7ff && codepoint < 0xe000) || codepoint > 0x10ffff)
+        {
+            throw_parse_exception(
+                "Unicode escape sequence is not a Unicode scalar value");
+        }
+
+        std::string result;
+        // See Table 3-6 of the Unicode standard
+        if (codepoint <= 0x7f)
+        {
+            // 1-byte codepoints: 00000000 0xxxxxxx
+            // repr: 0xxxxxxx
+            result += static_cast<char>(codepoint & 0x7f);
+        }
+        else if (codepoint <= 0x7ff)
+        {
+            // 2-byte codepoints: 00000yyy yyxxxxxx
+            // repr: 110yyyyy 10xxxxxx
+            //
+            // 0x1f = 00011111
+            // 0xc0 = 11000000
+            //
+            result += static_cast<char>(0xc0 | ((codepoint >> 6) & 0x1f));
+            //
+            // 0x80 = 10000000
+            // 0x3f = 00111111
+            //
+            result += static_cast<char>(0x80 | (codepoint & 0x3f));
+        }
+        else if (codepoint <= 0xffff)
+        {
+            // 3-byte codepoints: zzzzyyyy yyxxxxxx
+            // repr: 1110zzzz 10yyyyyy 10xxxxxx
+            //
+            // 0xe0 = 11100000
+            // 0x0f = 00001111
+            //
+            result += static_cast<char>(0xe0 | ((codepoint >> 12) & 0x0f));
+            result += static_cast<char>(0x80 | ((codepoint >> 6) & 0x1f));
+            result += static_cast<char>(0x80 | (codepoint & 0x3f));
+        }
+        else
+        {
+            // 4-byte codepoints: 000uuuuu zzzzyyyy yyxxxxxx
+            // repr: 11110uuu 10uuzzzz 10yyyyyy 10xxxxxx
+            //
+            // 0xf0 = 11110000
+            // 0x07 = 00000111
+            //
+            result += static_cast<char>(0xf0 | ((codepoint >> 18) & 0x07));
+            result += static_cast<char>(0x80 | ((codepoint >> 12) & 0x3f));
+            result += static_cast<char>(0x80 | ((codepoint >> 6) & 0x3f));
+            result += static_cast<char>(0x80 | (codepoint & 0x3f));
+        }
+        return result;
+    }
+
+    uint32_t parse_hex(std::string::iterator& it,
+                       const std::string::iterator& end, uint32_t place)
+    {
+        uint32_t value = 0;
+        while (place > 0)
+        {
+            if (it == end)
+                throw_parse_exception("Unexpected end of unicode sequence");
+
+            if (!is_hex(*it))
+                throw_parse_exception("Invalid unicode escape sequence");
+
+            value += place * hex_to_digit(*it++);
+            place /= 16;
+        }
         return value;
+    }
+
+    bool is_hex(char c)
+    {
+        return is_number(c) || (c >= 'a' && c <= 'f') || (c >= 'A' && c <= 'F');
+    }
+
+    uint32_t hex_to_digit(char c)
+    {
+        if (is_number(c))
+            return static_cast<uint32_t>(c - '0');
+        return 10 + static_cast<uint32_t>(
+                        c - ((c >= 'a' && c <= 'f') ? 'a' : 'A'));
     }
 
     std::shared_ptr<base> parse_number(std::string::iterator& it,
@@ -2204,17 +2366,23 @@ class parser
     std::shared_ptr<value<bool>> parse_bool(std::string::iterator& it,
                                             const std::string::iterator& end)
     {
-        auto boolend = std::find_if(it, end, [](char c) {
-            return c == ' ' || c == '\t' || c == '#' || c == ',' || c == ']';
-        });
-        std::string v{it, boolend};
-        it = boolend;
-        if (v == "true")
-            return make_value<bool>(true);
-        else if (v == "false")
-            return make_value<bool>(false);
-        else
+        auto eat = make_consumer(it, end, [this]() {
             throw_parse_exception("Attempted to parse invalid boolean value");
+        });
+
+        if (*it == 't')
+        {
+            eat("true");
+            return make_value<bool>(true);
+        }
+        else if (*it == 'f')
+        {
+            eat("false");
+            return make_value<bool>(false);
+        }
+
+        eat.error();
+        return nullptr;
     }
 
     std::string::iterator find_end_of_number(std::string::iterator it,
@@ -2248,30 +2416,16 @@ class parser
     {
         auto time_end = find_end_of_time(it, end);
 
-        auto eat = [&](char c) {
-            if (it == time_end || *it != c)
-                throw_parse_exception("Malformed time");
-            ++it;
-        };
-
-        auto eat_digits = [&](int len) {
-            int val = 0;
-            for (int i = 0; i < len; ++i)
-            {
-                if (!is_number(*it) || it == time_end)
-                    throw_parse_exception("Malformed time");
-                val = 10 * val + (*it++ - '0');
-            }
-            return val;
-        };
+        auto eat = make_consumer(
+            it, time_end, [&]() { throw_parse_exception("Malformed time"); });
 
         local_time ltime;
 
-        ltime.hour = eat_digits(2);
+        ltime.hour = eat.eat_digits(2);
         eat(':');
-        ltime.minute = eat_digits(2);
+        ltime.minute = eat.eat_digits(2);
         eat(':');
-        ltime.second = eat_digits(2);
+        ltime.second = eat.eat_digits(2);
 
         int power = 100000;
         if (it != time_end && *it == '.')
@@ -2301,29 +2455,15 @@ class parser
     {
         auto date_end = find_end_of_date(it, end);
 
-        auto eat = [&](char c) {
-            if (it == date_end || *it != c)
-                throw_parse_exception("Malformed date");
-            ++it;
-        };
-
-        auto eat_digits = [&](int len) {
-            int val = 0;
-            for (int i = 0; i < len; ++i)
-            {
-                if (!is_number(*it) || it == date_end)
-                    throw_parse_exception("Malformed date");
-                val = 10 * val + (*it++ - '0');
-            }
-            return val;
-        };
+        auto eat = make_consumer(
+            it, date_end, [&]() { throw_parse_exception("Malformed date"); });
 
         local_date ldate;
-        ldate.year = eat_digits(4);
+        ldate.year = eat.eat_digits(4);
         eat('-');
-        ldate.month = eat_digits(2);
+        ldate.month = eat.eat_digits(2);
         eat('-');
-        ldate.day = eat_digits(2);
+        ldate.day = eat.eat_digits(2);
 
         if (it == date_end)
             return make_value(ldate);
@@ -2347,10 +2487,10 @@ class parser
             auto plus = *it == '+';
             ++it;
 
-            hoff = eat_digits(2);
+            hoff = eat.eat_digits(2);
             dt.hour_offset = (plus) ? hoff : -hoff;
             eat(':');
-            moff = eat_digits(2);
+            moff = eat.eat_digits(2);
             dt.minute_offset = (plus) ? moff : -moff;
         }
         else if (*it == 'Z')
@@ -2529,11 +2669,6 @@ class parser
             throw_parse_exception("Unidentified trailing character '"
                                   + std::string{*it}
                                   + "'---did you forget a '#'?");
-    }
-
-    bool is_number(char c)
-    {
-        return c >= '0' && c <= '9';
     }
 
     bool is_time(const std::string::iterator& it,
@@ -2786,6 +2921,57 @@ class toml_writer
         endline();
     }
 
+    /**
+     * Escape a string for output.
+     */
+    static std::string escape_string(const std::string& str)
+    {
+        std::string res;
+        for (auto it = str.begin(); it != str.end(); ++it)
+        {
+            if (*it == '\b')
+            {
+                res += "\\b";
+            }
+            else if (*it == '\t')
+            {
+                res += "\\t";
+            }
+            else if (*it == '\n')
+            {
+                res += "\\n";
+            }
+            else if (*it == '\f')
+            {
+                res += "\\f";
+            }
+            else if (*it == '\r')
+            {
+                res += "\\r";
+            }
+            else if (*it == '"')
+            {
+                res += "\\\"";
+            }
+            else if (*it == '\\')
+            {
+                res += "\\\\";
+            }
+            else if (*it >= 0x0000 && *it <= 0x001f)
+            {
+                res += "\\u";
+                std::stringstream ss;
+                ss << std::hex << static_cast<uint32_t>(*it);
+                res += ss.str();
+            }
+            else
+            {
+                res += *it;
+            }
+        }
+        return res;
+    }
+
   protected:
     /**
      * Write out a string.
@@ -2915,26 +3101,6 @@ class toml_writer
     {
         for (std::size_t i = 1; i < path_.size(); ++i)
             write(indent_);
-    }
-
-    /**
-     * Escape a string for output.
-     */
-    static std::string escape_string(const std::string& str)
-    {
-        std::string res;
-        for (auto it = str.begin(); it != str.end(); ++it)
-        {
-            if (*it == '\\')
-                res += "\\\\";
-            else if (*it == '"')
-                res += "\\\"";
-            else if (*it == '\n')
-                res += "\\n";
-            else
-                res += *it;
-        }
-        return res;
     }
 
     /**
